test/parsing/errors/keyword-as-id.boa
INPUTS: output sum of int;
output << 1;
